<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gzdc.ecar.Fragment.MyFragment">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/index_my"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_myhome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/ll_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_title_bg">

            <RelativeLayout
                android:id="@+id/rl_my_head"
                android:layout_width="match_parent"
                android:layout_height="133dp"

                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/rip_user_head"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rip_user_head"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="sssssss" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/name"
                    android:layout_below="@id/rip_user_head"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/name"
                    android:text="15974265378"
                    android:layout_marginLeft="5dp"/>

                <com.gzdc.ecar.View.RoundImagePer
                    android:id="@+id/rip_user_head"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_alignLeft="@+id/tv_user_name"
                    android:layout_alignStart="@+id/tv_user_name"
                    android:layout_centerVertical="true"
                    android:background="@color/home_title_bg"
                    android:src="@mipmap/delault_head" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/offlinemap"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_allorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/all_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/iv_allorder"
                android:text="@string/offline_map"
                android:textColor="@color/text_color1"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/white" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/text_gray" />

        <RelativeLayout
            android:id="@+id/untask"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_mycollect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/all_order" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_mycollect"
                android:layout_toRightOf="@+id/iv_mycollect"
                android:text="@string/untask"
                android:textColor="@color/text_color1"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/text_gray" />

        <RelativeLayout
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_scanning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/all_order" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/text_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_scanning"
                android:layout_toRightOf="@+id/iv_scanning"
                android:text="@string/task"
                android:textColor="@color/text_color1"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/text_gray" />

        <RelativeLayout
            android:id="@+id/completetask"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/taskiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/all_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/taskiv"
                android:text="@string/tapproved_Task"
                android:textColor="@color/text_color1"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/text_gray" />

        </RelativeLayout>
    </LinearLayout>

<Button
    android:id="@+id/logingout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="退出登录"
    android:background="@mipmap/login_button"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="45dp"
    android:textColor="@color/white"
    android:layout_centerHorizontal ="true"/>
</RelativeLayout>

